Restructured blur now playing screen Blur player is now more responsive and scales properly to smaller screens.

--- a/app/src/main/res/drawable/gradient_dark.xml
+++ b/app/src/main/res/drawable/gradient_dark.xml
@@ -4,6 +4,7 @@
         <shape>
             <gradient
                 android:startColor="#000000"
+                android:centerColor="#80000000"
                 android:endColor="#30000000"
                 android:angle="90"/>
         </shape>
