Added translations to purchase page

--- a/app/src/main/res/layout/pro_sheet_layout.xml
+++ b/app/src/main/res/layout/pro_sheet_layout.xml
@@ -70,7 +70,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/boldfont"
-        android:text="@string/buy_pro_pack"
+        android:text="@string/shop_title"
         android:textColor="#ffffff"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:layout_marginEnd="12dp"
         android:fontFamily="@font/semiboldfont"
         android:alpha="0.8"
-        android:text="Pro pack unlocks all themes, pro features and supports development."
+        android:text="@string/shop_sub"
         android:textColor="#ffffff"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@id/buy_button"
@@ -111,7 +111,7 @@
         android:id="@+id/desc0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No Ads Ever"
+        android:text="@string/shop_desc0"
         android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
@@ -129,7 +129,7 @@
         android:id="@+id/desc0sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This app isn't ad supported and aims to stay that way. Pro version will always be ad free."
+        android:text="@string/shop_sub0"
         android:textSize="12dp"
         android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
@@ -149,7 +149,7 @@
         android:id="@+id/desc1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/custom_themes"
+        android:text="@string/shop_desc1"
         android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
@@ -167,7 +167,7 @@
         android:id="@+id/desc1sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Animated starry night themes, blurry and more!"
+        android:text="@string/shop_sub1"
         android:textSize="12dp"
         android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
@@ -187,7 +187,7 @@
         android:id="@+id/desc2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pro_features"
+        android:text="@string/shop_desc2"
         android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
@@ -205,7 +205,7 @@
         android:id="@+id/desc2sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Unlocks pro features and any future pro additions."
+        android:text="@string/shop_sub2"
         android:textSize="12dp"
         android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
@@ -225,7 +225,7 @@
         android:id="@+id/desc3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="All Now Playing Screens"
+        android:text="@string/shop_desc3"
         android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
@@ -243,7 +243,7 @@
         android:id="@+id/desc3sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Includes new Blur player with a clean minimal design."
+        android:text="@string/shop_sub3"
         android:textSize="12dp"
         android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
@@ -263,7 +263,7 @@
         android:id="@+id/desc4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/future_updates"
+        android:text="@string/shop_desc4"
         android:textSize="15dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/white"
@@ -281,7 +281,7 @@
         android:id="@+id/desc4sub"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Includes any pro content added in future updates."
+        android:text="@string/shop_sub4"
         android:textSize="12sp"
         android:alpha="0.8"
         android:drawableStart="@drawable/ic_check_circle_24"
@@ -301,7 +301,7 @@
         android:id="@+id/restore_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Restore Purchase"
+        android:text="@string/restore"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:alpha="0.5"
