Added translations to intro dialog

--- a/app/src/main/res/layout/intro_layout.xml
+++ b/app/src/main/res/layout/intro_layout.xml
@@ -19,7 +19,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/boldfont"
-        android:text="Pick a Theme"
+        android:text="@string/intro_dialog_title"
         android:textColor="@color/black"
         android:textSize="18dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="12dp"
         android:fontFamily="@font/regularfont"
-        android:text="Change this at any time in the settings."
+        android:text="@string/intro_dialog_sub"
         android:textColor="@color/black"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/black"
-        android:text="white"
+        android:text="@string/intro_dialog_white_button"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="@id/light_button"
         app:layout_constraintStart_toStartOf="@id/light_button"
@@ -103,7 +103,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/semiboldfont"
         android:textColor="@color/black"
-        android:text="black"
+        android:text="@string/intro_dialog_black_button"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="@id/dark_button"
         app:layout_constraintStart_toStartOf="@id/dark_button"
@@ -116,7 +116,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/boldfont"
-        android:text="Unlock Pro Themes"
+        android:text="@string/intro_dialog_pro_title"
         android:textColor="@color/black"
         android:textSize="18dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -157,7 +157,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pro Pack"
+                android:text="@string/intro_dialog_pro_pack"
                 android:textSize="24dp"
                 android:fontFamily="@font/semiboldfont"
                 android:textColor="#ff0000"
@@ -170,7 +170,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Unlock all themes and pro features."
+                android:text="@string/intro_dialog_pro_desc"
                 android:textSize="12dp"
                 android:fontFamily="@font/regularfont"
                 android:textColor="#ff0000"
