Added custom background functionality

--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -82,6 +82,13 @@
         app:starsView_starColors="@array/star_colors_small"
         app:starsView_starCount="100" />
 
+    <ImageView
+        android:id="@+id/custom_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        />
+
     <FrameLayout
         android:id="@+id/fl1"
         android:layout_width="match_parent"
