--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -5,6 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.kabouzeid.trebl.com.trebl.gramophone.ui.fragments.mainactivity.library.pager.MoreFragment">
 
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_marginBottom="@dimen/mini_player_height"
+       >
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/settingsButton"
         android:layout_width="match_parent"
@@ -309,7 +319,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pro_layout"
         android:layout_width="match_parent"
@@ -369,5 +378,9 @@
             android:layout_marginTop="5dp"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
