Added translations for more library tab

--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -197,7 +197,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
-            android:text="Now playing screen"
+            android:text="@string/settings_change_player"
             android:fontFamily="@font/semiboldfont"
             android:textColor="?textColor"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -247,7 +247,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
-            android:text="Change theme"
+            android:text="@string/settings_change_theme"
             android:fontFamily="@font/semiboldfont"
             android:textColor="?textColor"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -297,7 +297,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
-            android:text="Change background"
+            android:text="@string/settings_change_background"
             android:fontFamily="@font/semiboldfont"
             android:textColor="?textColor"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -353,7 +353,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Buy Pro Pack"
+            android:text="@string/settings_pro_title"
             android:textSize="24dp"
             android:fontFamily="@font/semiboldfont"
             android:textColor="#ff0000"
@@ -366,7 +366,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Unlock all themes, pro features and no ads."
+            android:text="@string/settings_pro_desc"
             android:textSize="12dp"
             android:fontFamily="@font/regularfont"
             android:textColor="?textColor"
