Updated circle icon

--- a/app/src/main/res/drawable/ic_circle_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_circle_white_24dp.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="oval">
             <solid
-                android:color="#20ffffff"
+                android:color="#ffffff"
                 />
         </shape>
     </item>
