--- a/app/src/main/res/drawable/ic_menu_pro_24dp.xml
+++ b/app/src/main/res/drawable/ic_menu_pro_24dp.xml
@@ -1,5 +1,10 @@
-<vector android:height="24dp" android:tint="?libraryTitleColor"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="?libraryTitleColor" android:pathData="M19,9l1.25,-2.75L23,5l-2.75,-1.25L19,1l-1.25,2.75L15,5l2.75,1.25L19,9zM11.5,9.5L9,4 6.5,9.5 1,12l5.5,2.5L9,20l2.5,-5.5L17,12l-5.5,-2.5zM19,15l-1.25,2.75L15,19l2.75,1.25L19,23l1.25,-2.75L23,19l-2.75,-1.25L19,15z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="?libraryTitleColor" android:name="AD" android:pathData="m174.7 214.2c8.4 19.6 16.9 39.1 25.3 58.7h-48.3c7.7 -19.6 15.3 -39.1 23 -58.7zm146.5 -6.1c27.8 0 49.2 3.2 60.7 21c4.9 7.6 5.9 17.3 5.8 29.9c-0.5 39.5 -30.6 46.3 -70.4 46.3c-4.4 0 -9 -0.1 -13.7 -0.2c0 -32.2 0 -64.5 0 -96.7c6.1 -0.2 12 -0.3 17.6 -0.3zm-163.7 -30.8c-23.4 52.6 -46.8 105.1 -70.2 157.7h38c4.6 -11.1 9.2 -22.3 13.8 -33.4h72.5c4.6 11.1 9.2 22.3 13.8 33.4h39.1c-23.4 -52.6 -46.8 -105.1 -70.2 -157.7zm144.9 -0.4c-11.4 0 -23.3 0.2 -35.6 0.4c0 52.6 0 105.1 0 157.7c10.9 0.2 21.5 0.3 31.6 0.3c68.4 0 116.4 -7.1 127.3 -69.4c2.6 -15 -2.2 -29.7 -5.8 -39.1c-16.5 -44.1 -60.5 -49.9 -117.5 -49.9z"/>
+    <path android:name="Ellipse 1"
+        android:pathData="m255.8 57.3c109.8 0 198.9 89 198.9 198.9c0 109.8 -89 198.9 -198.9 198.9c-109.8 0 -198.9 -89 -198.9 -198.9c0 -109.8 89 -198.9 198.9 -198.9z"
+        android:strokeColor="?libraryTitleColor" android:strokeMiterLimit="100" android:strokeWidth="40"/>
+    <path android:fillColor="?libraryTitleColor" android:name="Line 1"
+        android:pathData="m131.5 124.1 0.6 -0.6 249.1 265 -0.6 0.6 -249.1 -265z"
+        android:strokeColor="?libraryTitleColor" android:strokeMiterLimit="100" android:strokeWidth="30"/>
 </vector>
